{{$NEXT}}

6.053     2022-12-20 12:16:11+01:00 Europe/Berlin

 - Fixed NSX: ICMPTypeServiceEntry

6.052     2022-12-15 12:08:51+01:00 Europe/Berlin

 - NSX:
   - Changed extension from Tier-0/1 to T0/T1.
   - Set source_ports even if empty.
   - Add "profiles": [ "ANY" ] to rules.
   - Set attribute ip_protocol to IPV4 or IPV6.

6.051     2022-11-21 16:02:15+01:00 Europe/Berlin

 - Added suport for "aes-gcm", "aes-gcm-192", "aes-gcm-256"
   at attribute "encryption" of isakmp definition.
 - Added support for
   "aes-gcm", "aes-gcm-192", "aes-gcm-256",
   "aes-gmac", "aes-gmac-192", "aes-gmac-256"
   at attribute "esp_encryption" of ipsec definition.
 - Added support for other value than email address
   in attribute "id" of router definition.
   In this case the generated "crypto ca certificate map"
   no longer checks for email: "subject-name attr ea eq <id>"
   but for common name: "subject-name attr cn eq <id>".
   It is supported to use an IP address as "id".
 - Changed handling of attribute "esp_authentication" of ipsec definition.
   If this attribute is not given, a value of "null" is generated
   in "protocol esp integrity" of ASA anyway.
 - Removed attribute "disabled" at interface definition.

6.050     2022-10-13 16:13:31+02:00 Europe/Berlin

 - Added new option '-i' / '--ip' to command 'print-service'.
   If given together with option '-n' / '--name', it shows IP address
   together with name for source and destination of each rule.
   Output format is:
   name:action src-ip src-name dst-ip dst-name protocol.
 - Fixed generated IPv6 code for PAN-OS:
   IPv6 rules use separate name space now to prevent name clashes between
   IPv4 and IPv6 rules.
   It is supported now to generate IPv4 and IPv6 rules for the same VSYS.

6.049     2022-09-06 17:12:38+02:00 Europe/Berlin

 - Reverted optimized parallel execution from version 6.046,
   causing rare occurrences of
   "fatal error: concurrent map read and map write".