@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+ - Fixed NSX and PAN-OS: Call local optimization to prevent duplicate
+   and redundant IP addresses in rules.
+
 6.053     2022-12-20 12:16:11+01:00 Europe/Berlin
 
  - Fixed NSX: ICMPTypeServiceEntry
